--- a/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
+++ b/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
@@ -53,7 +53,7 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
-    <widget class="QMenu" name="menuLayout">
+    <widget class="QMenu" name="MenuLayout">
      <property name="title">
       <string>Layout</string>
      </property>
@@ -77,7 +77,7 @@
     <addaction name="actionViewCacheRemoteIOManager"/>
     <addaction name="actionViewApplicationSettings"/>
     <addaction name="separator"/>
-    <addaction name="menuLayout"/>
+    <addaction name="MenuLayout"/>
    </widget>
    <widget class="QMenu" name="menuWindow">
     <property name="title">
@@ -89,6 +89,7 @@
      </property>
      <addaction name="actionWindowToolbarsLoadSave"/>
      <addaction name="actionWindowToolbarsUndoRedo"/>
+     <addaction name="actionWindowToolbarsView"/>
      <addaction name="actionWindowToolbarsLayout"/>
      <addaction name="actionWindowToolbarsMouseMode"/>
      <addaction name="actionWindowToolbarsModules"/>
@@ -234,7 +235,17 @@
   </widget>
   <widget class="QToolBar" name="ViewToolBar">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>View ToolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>  <widget class="QToolBar" name="LayoutToolBar">
+   <property name="windowTitle">
+    <string>Layout ToolBar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -690,6 +701,17 @@
     <bool>true</bool>
    </property>
   </action>
+  <action name="actionWindowToolbarsView">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>View</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -785,7 +807,7 @@
   <connection>
    <sender>actionWindowToolbarsLayout</sender>
    <signal>triggered(bool)</signal>
-   <receiver>ViewToolBar</receiver>
+   <receiver>LayoutToolBar</receiver>
    <slot>setVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
