--- a/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
+++ b/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
@@ -12,5 +12,11 @@
 
     <file>Icons/CheckModified.png</file>
     <file>Icons/CheckModifiedData.png</file>
+
+    <file>Icons/MousePickMode.png</file>
+    <file>Icons/MouseSinglePickMode.png</file>
+    <file>Icons/MousePlaceMode.png</file>
+    <file>Icons/MouseSinglePlaceMode.png</file>
+    <file>Icons/MouseRotateMode.png</file>
   </qresource>
 </RCC>
