ENH: Connect qMRMLSlicesControllerToolBar actions to MRML nodes
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14474 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSlicesControllerToolBar.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSlicesControllerToolBar.ui
@@ -395,7 +395,7 @@
    <sender>actionCrosshairNavigator</sender>
    <signal>toggled(bool)</signal>
    <receiver>qMRMLSlicesControllerToolBar</receiver>
-   <slot>setNavigatorVisible(bool)</slot>
+   <slot>setNavigatorEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -480,7 +480,7 @@
   <slot>setLabelGridVisible(bool)</slot>
   <slot>fitToWindow()</slot>
   <slot>setSliceIntersectionVisible(bool)</slot>
-  <slot>setNavigatorVisible(bool)</slot>
+  <slot>setNavigatorEnabled(bool)</slot>
   <slot>toggleBackgroundForeground()</slot>
   <slot>showBackground()</slot>
   <slot>showForeground()</slot>
