ENH: Propagate renaming that occured in CTK: ctkSliderSpinBoxWidget->ctkSliderWidget
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14487 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -247,7 +247,7 @@
          </widget>
         </item>
         <item>
-         <widget class="ctkSliderSpinBoxWidget" name="SliceOffsetSlider"/>
+         <widget class="ctkSliderWidget" name="SliceOffsetSlider"/>
         </item>
        </layout>
       </item>
@@ -258,9 +258,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ctkSliderSpinBoxWidget</class>
+   <class>ctkSliderWidget</class>
    <extends>QWidget</extends>
-   <header>ctkSliderSpinBoxWidget.h</header>
+   <header>ctkSliderWidget.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLNodeComboBox</class>
