--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLTransformSliders.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLTransformSliders.ui
@@ -232,13 +232,13 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>ctkSliderSpinBoxWidget</class>
+   <class>ctkSliderWidget</class>
    <extends>QWidget</extends>
-   <header>ctkSliderSpinBoxWidget.h</header>
+   <header>ctkSliderWidget.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLLinearTransformSlider</class>
-   <extends>ctkSliderSpinBoxWidget</extends>
+   <extends>ctkSliderWidget</extends>
    <header>qMRMLLinearTransformSlider.h</header>
    <container>1</container>
   </customwidget>
